fixed centering text style issue on github

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
       <link rel="stylesheet" href="./assets/css/style.css">
    </head>
    <body>
-      <div class="container-fluid bg-dark">
-         <div class="row r">
+      
+         <div class="row">
             <div class="col-lg-3 left-panel">
             </div>
             <div class="col-lg-6">
                <div class="row">
-                  <div class="col-lg-3 bg-dark text-white g">
+                  <div class="col-lg-3 bg-dark text-white title">
                      <h2 class="card-title">Wins</h2>
                      <div class="row">
                         <div class="col">
@@ -89,9 +89,8 @@
             </div>
          </div>
          <nav class="navbar fixed-bottom navbar-dark bg-dark l">
-            <a class="navbar-brand" href="#">Lemmons Creative</a>
+            <a class="navbar-brand text-warning" href="#">Lemmons Creative</a>
          </nav>
-      </div>
       <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
    </body>
 </html>
