added digital keyboard for mobile device

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <div class="col-lg-3 right-panel">
             </div>
          </div>
+      <div class="keyboard">
+     
+      </div>
          <nav class="navbar fixed-bottom navbar-dark bg-dark l">
             <a class="navbar-brand text-warning" href="#">Lemmons Creative</a>
          </nav>
